--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col">
                     <div class="main-content text-center">
-                        <h1 class="main-heading">iPhone X testing testing</h1>
+                        <h1 class="main-heading">iPhone X testing tes</h1>
                         <p class="main-p m-0">Pro camera. Beautiful Display.  Performance.</p>
                         <img src="iphonex.png" alt="">
                     </div>
